@@ -4,6 +4,9 @@ Date: 2020.04.26
   Features:
     - Added steam omnitractor and omniphlog if Bob's burner phase is enabled
     - Updated ore capture and replace script to have increased functionality
+  Changes:
+    - Changed Omnicium Plate stack size from 400 to 200
+    - Changed Omnite Brick stack size from 100 to 200
   Bugfixes:
     - Should not have other ores showing up on map generation screen
     - Improved readability of generation scripts
